[gd_scene load_steps=5 format=2]

[ext_resource path="res://locations/pause.gd" type="Script" id=1]
[ext_resource path="res://objects/button3D.tscn" type="PackedScene" id=2]

[sub_resource type="ProceduralSky" id=1]
radiance_size = 0
sky_top_color = Color( 0.286275, 0.54902, 0.694118, 1 )
sky_horizon_color = Color( 0.431373, 0.431373, 0.431373, 1 )
sky_curve = 1.1298
ground_bottom_color = Color( 0.431373, 0.431373, 0.431373, 1 )
ground_horizon_color = Color( 0.431373, 0.431373, 0.431373, 1 )
texture_size = 0

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )
ambient_light_color = Color( 1, 1, 1, 1 )
ambient_light_sky_contribution = 0.0
fog_enabled = true
fog_color = Color( 0.431373, 0.431373, 0.431373, 1 )
fog_depth_enabled = false
fog_height_enabled = true
fog_height_min = -49.0
fog_height_max = -51.0
dof_blur_far_distance = 40.0
dof_blur_far_transition = 10.0
dof_blur_far_amount = 0.05
dof_blur_far_quality = 0
adjustment_enabled = true

[node name="pause" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -50, 0 )
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
environment = SubResource( 2 )
far = 5.0

[node name="RayCast" type="RayCast" parent="Camera"]
enabled = true
cast_to = Vector3( 0, 0, -3 )
collide_with_areas = true
collide_with_bodies = false

[node name="crosshair" type="ColorRect" parent="Camera"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -5.0
margin_top = -5.0
margin_right = 5.0
margin_bottom = 5.0

[node name="continue" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.511758, -2 )
text = "Продолжить"
hitbox_scale = Vector3( 4, 1, 1 )
shaded = true

[node name="master" type="Spatial" parent="."]
transform = Transform( 0.5, 0, -0.866025, 0, 1, 0, 0.866025, 0, 0.5, 2.16212, 0.389171, -0.384931 )

[node name="Label" type="Label3D" parent="master"]
pixel_size = 0.02
shaded = true
double_sided = false
alpha_cut = 1
text = "10"

[node name="master_up" parent="master" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0.04, 0 )
text = ">"
hitbox_scale = Vector3( 0.5, 1, 1 )
shaded = true

[node name="master_down" parent="master" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.25, 0.04, 0 )
text = "<"
hitbox_scale = Vector3( 0.5, 1, 1 )
shaded = true

[node name="Label3D" type="Label3D" parent="master"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 0 )
cast_shadow = 0
pixel_size = 0.02
shaded = true
double_sided = false
alpha_cut = 1
text = "Общая:"

[node name="music" type="Spatial" parent="."]
transform = Transform( 0.5, 0, -0.866025, 0, 1, 0, 0.866025, 0, 0.5, 2.16212, -0.123566, -0.384931 )

[node name="Label" type="Label3D" parent="music"]
pixel_size = 0.02
shaded = true
double_sided = false
alpha_cut = 1
text = "10"

[node name="music_up" parent="music" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0.04, 0 )
text = ">"
hitbox_scale = Vector3( 0.5, 1, 1 )
shaded = true

[node name="music_down" parent="music" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.25, 0.04, 0 )
text = "<"
hitbox_scale = Vector3( 0.5, 1, 1 )
shaded = true

[node name="Label3D" type="Label3D" parent="music"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.1, 0, 0 )
cast_shadow = 0
pixel_size = 0.02
shaded = true
double_sided = false
alpha_cut = 1
text = "Музыка:"

[node name="sound" type="Spatial" parent="."]
transform = Transform( 0.5, 0, -0.866025, 0, 1, 0, 0.866025, 0, 0.5, 2.16212, -0.608296, -0.384931 )

[node name="Label" type="Label3D" parent="sound"]
pixel_size = 0.02
shaded = true
double_sided = false
alpha_cut = 1
text = "10"

[node name="sound_up" parent="sound" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0.04, 0 )
text = ">"
hitbox_scale = Vector3( 0.5, 1, 1 )
shaded = true

[node name="sound_down" parent="sound" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.25, 0.04, 0 )
text = "<"
hitbox_scale = Vector3( 0.5, 1, 1 )
shaded = true

[node name="Label3D" type="Label3D" parent="sound"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.84, 0, 0 )
cast_shadow = 0
pixel_size = 0.02
shaded = true
double_sided = false
alpha_cut = 1
text = "Звук:"

[node name="sens" type="Spatial" parent="."]
transform = Transform( 0.5, 0, 0.866025, 0, 1, 0, -0.866025, 0, 0.5, -1.36072, 0, -1.82616 )

[node name="Label" type="Label3D" parent="sens"]
pixel_size = 0.02
shaded = true
double_sided = false
alpha_cut = 1
text = "10"

[node name="sens_up" parent="sens" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0.04, 0 )
text = ">"
hitbox_scale = Vector3( 0.5, 1, 1 )
shaded = true

[node name="sens_down" parent="sens" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.25, 0.04, 0 )
text = "<"
hitbox_scale = Vector3( 0.5, 1, 1 )
shaded = true

[node name="Label3D" type="Label3D" parent="sens"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.2, 0, 0 )
cast_shadow = 0
shaded = true
double_sided = false
alpha_cut = 1
text = "Чувствительность
мыши"

[node name="exit" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.586015, -2 )
text = "Выход"
hitbox_scale = Vector3( 2, 1, 1 )
shaded = true

[node name="clear_save" parent="." instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, -0.0111732, 2 )
default_color = Color( 1, 0.498039, 0.498039, 1 )
active_color = Color( 1, 0, 0, 1 )
text = "Очистить
сохранение"
hitbox_scale = Vector3( 4, 1.5, 1 )
shaded = true

[connection signal="tree_exited" from="." to="." method="_on_pause_tree_exited"]
[connection signal="pressed" from="continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="master/master_up" to="." method="_on_master_up_pressed"]
[connection signal="pressed" from="master/master_down" to="." method="_on_master_down_pressed"]
[connection signal="pressed" from="music/music_up" to="." method="_on_music_up_pressed"]
[connection signal="pressed" from="music/music_down" to="." method="_on_music_down_pressed"]
[connection signal="pressed" from="sound/sound_up" to="." method="_on_sound_up_pressed"]
[connection signal="pressed" from="sound/sound_down" to="." method="_on_sound_down_pressed"]
[connection signal="pressed" from="sens/sens_up" to="." method="_on_sens_up_pressed"]
[connection signal="pressed" from="sens/sens_down" to="." method="_on_sens_down_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="clear_save" to="." method="_on_clear_save_pressed"]
